<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">问道</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!--<string name="httpurl">http://172.30.59.84</string> -->
    <string name="httpurl">http://192.168.191.1</string>
    <string name="toast">WenDao IndoorNavigation System —— 锦年  </string>
    <string name="home">问道</string>
    <string name="login_page">在彼何方</string>
    <string name="traveldiary">灵犀一点</string>
    <string name="voice">共创宏图</string>
    <string name="phoneus">联系我们</string>
    <string name="title1">苹果在中国市场：Google的劣势反而是苹果的优势</string>
    <string name="title2">吞噬大数据存储领域新机制——NoSQL模式解析</string>
    <string name="title3">神舟九号：宇航员会携带什么移动应用上天？</string>
    <string name="title4">2013苹果全球开发者大会（WWDC）12日开幕</string>
    <string name="title5">Win8说：请把PC丢出窗外！</string>
    <string name="vcode_refresh">换一换</string>
    <string name="back">返回</string>
    <string name="refresh">刷新</string>
    <string name="account_regedit">注册</string>
    <string name="title_login">定位</string>
    <string name="help">帮助</string>
    <string name="title_activity_travel__friend">Travel_Friend</string>
    <string name="title_activity_travel__game">1</string>
    <string name="scan_tips">二维码对准扫描框即可自动扫描</string>
    <string name="default_floor">F4</string>
    <string name="serach_hint">Goal</string>
    <string name="servicPhone">客服专线 ：</string>
    <string name="Phone">400–820–8820</string>
    <string name="servic">我们将竭诚为您服务！</string>
    <string name="sendMail">Email:937044867@qq.com</string>
    <string name="servicTime">客服工作时间：9:00 – 23:00（周一至周日）</string>
    <string name="axis_x">X: </string>
    <string name="axis_y">Y: </string>
    <string name="axis_z">Z: </string>
    <string name="save">保存</string>
    <string name="step">计步器</string>
    <string name="capname">指南针</string>
    <string name="steps_number">Nombre depas : </string>
    <string name="reset">重置</string>
    <string name="axis_1">1 Axe</string>
    <string name="axis_multi">多个 Axes</string>
    <string name="default_tv_axis">_</string>
    <string name="default_tv_steps_counter">0</string>
	<string name="limit">限制</string>
	<string name="amplitude">振幅</string>	
	<string name="title_activity_coordinate">CoordinateActivity</string>
	<string name="cap">Cap value : </string>   
    <string name="title_activity_cap">CapActivity</string>
    <string name="xValue">X value : </string>
    <string name="yValue">Y value : </string>
    <string name="zValue">Z value : </string>
	<string name="IMUsteps">现在进入计步导航模式，请将手机放入口袋或自然垂放于手中</string>
</resources>