<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff1f1f1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/title_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title"
            style="@style/title_margin"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/title_text"
                style="@style/title_info"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/help" />
        </LinearLayout>

        <Button
            android:id="@+id/title_back"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dip"
            android:background="@drawable/title_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:background="@drawable/login_tab_normal"
            android:text="@string/save"
            android:textSize="16.0sp" >
        </Button>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:background="@drawable/login_tab_normal"
            android:text="@string/reset"
            android:textSize="16.0sp" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <TextView
            android:id="@+id/tv_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="50dp"
            android:text="@string/default_tv_axis" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:max="100"
            android:paddingBottom="10dp"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tv_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limit"
            android:width="90dp" />

        <SeekBar
            android:id="@+id/seekBarLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9"
            android:progress="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tv_ampli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amplitude"
            android:width="90dp" />

        <SeekBar
            android:id="@+id/seekBarAmplitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9"
            android:progress="4" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_steps_counter"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.52"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/default_tv_steps_counter"
        android:textSize="120sp" />

    <!-- android:visibility="invisible" -->

    <TextView
        android:id="@+id/tv_log_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ToggleButton
            android:id="@+id/tgbtnAxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/axis_1"
            android:textOn="@string/axis_multi" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</TableLayout>